# ai_engineering_codes_and_resources

./: .gitignore  1_prompt_template.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: 1_prompt_template-checkpoint.ipynb
1_IBM_RAG_and_Agentic_AI_Course/.ipynb_checkpoints/: 3_agents-checkpoint.ipynb
1_IBM_RAG_and_Agentic_AI_Course/1_Develop_Generative_AI_Applications_Get_Started/: LAB_1_In-Context Learning and Prompt Templates for Advanced AI.ipynb  LAB_2_Build Smarter AI Apps Empower LLMs with LangChain.ipynb
1_IBM_RAG_and_Agentic_AI_Course/2_Build RAG Applications Get Started/: LAB_1_Summarize private documents using RAG LangChain and LLMs.ipynb
1_IBM_RAG_and_Agentic_AI_Course/3_Vector Databases for RAG/: LAB1_Similarity Search by Hand.ipynb  LAB2_similarity_search_on_chromadb.py
1_IBM_RAG_and_Agentic_AI_Course/3_Vector Databases for RAG An Introduction/: LAB3_similarity_search_on_chromadb2.py
1_IBM_RAG_and_Agentic_AI_Course/4_Build_Multimodal_Generative_AI_Applications/: LAB1_Use Mixtral and gTTS to create your personal storyteller.ipynb  LAB_3_DALL E Image generation Guide for Beginners.ipynb  LAB_4_Build an Image Captioning System with watsonx and Granite.ipynb
1_IBM_RAG_and_Agentic_AI_Course/5_Fundamentals_of_Building_AI_Agents/: LAB_1_AI-Math-Assistant Tool Calling.ipynb  LAB_2_LLM-Powered Data Science LCEL.ipynb  LAB_3_Build Interactive LLM Agents with Tools.ipynb  LAB_4_Manual Tool-Calling Agent.ipynb  LAB_5_Text-to-chart in Jupyter notebook Visualization Agent.ipynb
1_IBM_RAG_and_Agentic_AI_Course/8_Agentic_AI_with_LangGraph_CrewAI_AutoGen_and_BeeAI/: course_notes.md
1_IBM_RAG_and_Agentic_AI_Course/Z_Practice/: notes.md  practice_workbook.ipynb  test.py
1_ibm_rag_and_agentic_ai_course/: 1_prompt_template.ipynb
(+41 files in other folders)
