[project]
name = "ai_engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.9",
    "python-dotenv>=1.1.1",
    "ibm-watsonx-ai==1.0.8",
    "langchain==0.2.11",
    "langchain-ibm==0.1.7",
    "langchain-core==0.2.43",
    "langchain-community==0.2.10",
    "langchain-experimental==0.0.62",
    "langchainhub==0.1.18",
    "pypdf==4.2.0",
    "chromadb==0.4.24",
    "tenacity==8.2.3",
    "ipykernel>=6.30.1",
    "ibm-watson-machine-learning==1.0.367"
]
